--- a/src/Components/LabelWrapper.css
+++ b/src/Components/LabelWrapper.css
@@ -11,5 +11,4 @@
   text-align: center;
   height: 24px;
   line-height: 24px;
-  position: relative;
 }
